<resources>
    <string name="app_name">My Book Library</string>
    <string name="server_client_id">  1026175740513-kb7qoq7pj334jpqhr1q19411gdje1lpc.apps.googleusercontent.com  </string>
    <string name="login_page_title">My Book Library</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="loading">Loading…</string>
    <string name="logout">Logout</string>


    <!-- Google SearchView -->
    <string name="search_hint_book">Find a new book</string>

    <!-- SearchBook Activity -->
    <string name="empty_view_text">No Book Found</string>
    <string name="search_title">Search</string>
    <string name="searchBookActivity_toolbar_title">Search books</string>

    <!-- Library searchView -->
    <string name="search_hint_book_library">Find in library</string>


    <!--BookDetail Activity -->
    <string name="label_title">Title:</string>
    <string name="label_author">Author:</string>
    <string name="label_rate">Rate:</string>
    <string name="label_year">Published:</string>
    <string name="label_categories">Categories:</string>
    <string name="label_description">Description:</string>
    <string name="label_comment"><![CDATA[<b> My comments: </b>]]> %s</string>
    <string name="label_isbn">ISBN:</string>
    <string name="btn_back">back</string>
    <string name="btn_add">Add to Library</string>
    <string name="bookDetailActivity_toolbar_title">Book details</string>

    <!--LibraryDetail Activity -->
    <string name="label_officialRate">Official Rate:</string>
    <string name="label_personalRate">My Rate:</string>

    <!--UpdateBook Activity -->
    <string name="update">Update</string>
    <string name="commentHint">Comments</string>


</resources>
